--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,27 +3,21 @@
     Openid:
   = h @user.openid_identifier
 %p
-  %b
-    Login count:
+  %b= t(:login_count)
   = h @user.login_count
 %p
-  %b
-    Last request at:
+  %b= t(:last_request_at)
   = h @user.last_request_at
 %p
-  %b
-    Last login at:
+  %b= t(:last_login_at)
   = h @user.last_login_at
 %p
-  %b
-    Current login at:
+  %b= t(:current_login_at)
   = h @user.current_login_at
 %p
-  %b
-    Last login ip:
+  %b= t(:last_login_ip)
   = h @user.last_login_ip
 %p
-  %b
-    Current login ip:
+  %b= t(:current_login_ip)
   = h @user.current_login_ip
-= link_to 'Edit', edit_account_path
+= link_to t(:edit), edit_account_path
