new fresh version based on a middleware

--- a/public/sass/octo_rails.sass
+++ b/public/sass/octo_rails.sass
@@ -1,9 +1,8 @@
 body
   :background-color #DDDDDD
   :font-family Helvetica
-.octo-rails
   :margin 200px auto 0px
-  :width 400px
+  :width 500px
   h1
     :text-align center
     :font-family Georgia
@@ -25,7 +24,7 @@ body
     :border 3px solid #CCC
     :padding 10px
     input[type=text]
-      :width 100%
+      :width 95%
       :border 1px solid #999999
       :font-size 1.2em
       :margin-top 3px
@@ -52,7 +51,7 @@ body
       :top 1px
       :position relative
     .default_openid_url
-      :background url("../images/octo-rails/octo-logo.png") no-repeat 2px 4px
+      :background url("../images/octo-logo.png") no-repeat 2px 4px
       :color #666
       :border 1px solid #EFEFEF
       :padding 8px
