--- a/public/sass/formtastic_changes.sass
+++ b/public/sass/formtastic_changes.sass
@@ -1,5 +1,5 @@
 form.formtastic
-  :width 600px
+  :width 100%
   fieldset
     :background #EFEFEF
     :padding 10px
@@ -9,7 +9,10 @@ form.formtastic
       :font-weight bold
     &.buttons
       :background #DEDEDE
-      :padding-top 10px
-      :padding-bottom 10px
+      :padding 10px
       li
         :margin-bottom 0px
+form.formtastic fieldset
+  :width 95%
+form.formtastic fieldset > ol > li.string input
+  :max-width 70%
